Very basic examples that demo functionalities

--- a/examples/test/example.html
+++ b/examples/test/example.html
@@ -3,11 +3,14 @@
 <script src="../../dependencies/mustache.js" type="text/javascript"></script>
 <script src="../../syncable.js" type="text/javascript"></script>
 <script src="example.js" type="text/javascript"></script>
+<link href="../common.css" rel="stylesheet" type="text/css" /> 
 <link href="example.css" rel="stylesheet" type="text/css" /> 
 <body>
   <h1>Testing syncable collections</h1>
+  <p>This file is used to test the functions that manipulate collections.</p>
   <div id="tweets"></div>
   <hr/>
   <div id="comments"></div>
+  <i>For proper testing: We're using callbacks that use console.log, which only works with Webkit or Firebug. You need to open firebug to make it work on Firefox.</i>
 </body>
 </html>
