Example with pusherapp.com

--- a/examples/index.html
+++ b/examples/index.html
@@ -8,6 +8,7 @@
   <ul>
     <li><a href="test/example.html">Basic</a>: The code shows different examples of working with items.</li>
     <li><a href="dots/dots.html">Dots</a>: Graphic items moving, updated from the code.</li>
+    <li><a href="push/push.html">Push</a>: Update elements with HTTP Push, using Pusherapp.com</li>
   </ul>
 </body>
 </html>
