--- a/examples/chat/chat.html
+++ b/examples/chat/chat.html
@@ -11,7 +11,10 @@
 </head>
 <body>
   <h1>Chat</h1>
-  <input id="message" type="text"/>
+  <div id="new_message">
+    <input id="user" type="text" value="user"/>
+    <input id="message" type="text"/>
+  </div>
   <div id="messages"></div>
 </body>
 </html>
