Better test suite, demos, etc

--- a/examples/index.html
+++ b/examples/index.html
@@ -4,11 +4,21 @@
 <script src="../../syncable.js" type="text/javascript"></script>
 <link href="common.css" rel="stylesheet" type="text/css" /> 
 <body>
-  <h1>Examples</h1>
+  <h1>Syncable Examples</h1>
+  <p>
+    Syncable is a JS library that makes it easy to synchronize
+    HTML elements with remote data in real-time.
+  </p>
   <ul>
-    <li><a href="test/example.html">Basic</a>: The code shows different examples of working with items.</li>
-    <li><a href="dots/dots.html">Dots</a>: Graphic items moving, updated from the code.</li>
-    <li><a href="push/push.html">Push</a>: Update elements with HTTP Push, using Pusherapp.com</li>
+    <li><a href="hello/index.html">Hello world</a>: The simplest app you can build.</li>
+    <li><a href="dots/index.html">Dots</a>: Graphic items moving, updated from the code.</li>
+    <li><a href="push/index.html">Push</a>: Update elements with HTTP Push, using Pusherapp.com</li>
+  </ul>
+  <p>
+    Extras for development:
+  </p>
+  <ul>
+    <li><a href="test/index.html">Test suite</a>: Run this to see if your browser can </li>
   </ul>
 </body>
 </html>
