Adding setAttribute: atomic updated for one attribute, doesn't run callbacks

--- a/examples/test/index.html
+++ b/examples/test/index.html
@@ -23,7 +23,7 @@
         <span class="user">JSON:</span><span class="body">OH</span>
       </div>
       <div class="tweets_item" id="static_tweets_9">
-        <span class="user">nueve:</span><span class="body">que llueve, que llueve</span>
+        <span class="user">nueve:</span><span class="body">LLUEVE</span>
       </div>
       <div class="tweets_item" id="static_tweets_8">
         <span class="user">ocho:</span><span class="body">bizcocho</span>
