Adding email example case

--- a/examples/index.html
+++ b/examples/index.html
@@ -11,6 +11,7 @@
   </p>
   <ul>
     <li><a href="hello/index.html">Hello world</a>: The simplest app you can build.</li>
+    <li><a href="basic/index.html">Basic examples</a>: An interactive demo of basic operations with Collections.</li>
     <li><a href="dots/index.html">Dots</a>: Graphic items moving, updated from the code.</li>
     <li><a href="push/index.html">Push</a>: Update elements with HTTP Push, using Pusherapp.com</li>
   </ul>
