--- a/examples/index.html
+++ b/examples/index.html
@@ -1,8 +1,7 @@
 <html>
-<script src="../../dependencies/prototype.js" type="text/javascript"></script>
-<script src="../../dependencies/mustache.js" type="text/javascript"></script>
-<script src="../../syncable.js" type="text/javascript"></script>
-<link href="common.css" rel="stylesheet" type="text/css" /> 
+<head>
+  <link href="common.css" rel="stylesheet" type="text/css" /> 
+</head>
 <body>
   <h1>Syncable Examples</h1>
   <p>
