Adding footer navigation, fixing chat example

--- a/examples/basic/index.html
+++ b/examples/basic/index.html
@@ -14,6 +14,6 @@
   <div class="pane">
     <div id="emails"></div>
   </div>
-
+  <div id="footer"><a href="../">&lt;&lt; Back to more examples</a></div>
 </body>
 </html>
