--- a/examples/chat/index.html
+++ b/examples/chat/index.html
@@ -21,6 +21,7 @@
     <input id="message" type="text"/>
   </div>
   <div id="messages"></div>
+  <div id="footer"><a href="../">&lt;&lt; Back to more examples</a></div>
   <script src="http://json-pusher.heroku.com/asd/last_messages.js"></script>
 </body>
 </html>
