--- a/examples/dots/index.html
+++ b/examples/dots/index.html
@@ -13,5 +13,6 @@
   <p>The template is rendering them to a style, which positions them.</p>
   <p>We have a periodical executer that moves their position.</p>
   <div id="dots"></div>
+  <div id="footer"><a href="../">&lt;&lt; Back to more examples</a></div>
 </body>
 </html>
