--- a/examples/game/index.html
+++ b/examples/game/index.html
@@ -12,5 +12,6 @@
 <body>
   <h1>Game</h1>
   <div id="players"></div>
+  <div id="footer"><a href="../">&lt;&lt; Back to more examples</a></div>
 </body>
 </html>
