--- a/examples/hello/index.html
+++ b/examples/hello/index.html
@@ -58,5 +58,6 @@
       })
       tweets.renderAll()</code>
   </pre>
+  <div id="footer"><a href="../">&lt;&lt; Back to more examples</a></div>
 </body>
 </html>
