--- a/examples/index.html
+++ b/examples/index.html
@@ -12,6 +12,7 @@
     <li><a href="hello/index.html">Hello world</a>: The simplest app you can build.</li>
     <li><a href="basic/index.html">Basic examples</a>: An interactive demo of basic operations with Collections.</li>
     <li><a href="dots/index.html">Dots</a>: Graphic items moving, updated from the code.</li>
+    <li><a href="chat/index.html">Chat</a>: Simple chat using Pusherapp.com</li>
     <li><a href="push/index.html">Push</a>: Update elements with HTTP Push, using Pusherapp.com</li>
   </ul>
   <p>
@@ -20,5 +21,6 @@
   <ul>
     <li><a href="test/index.html">Test suite</a>: Run this to see if your browser can </li>
   </ul>
+  <p><a href="http://github.com/micho/syncable">View on Github</a></p>
 </body>
 </html>
