--- a/examples/push/index.html
+++ b/examples/push/index.html
@@ -19,6 +19,7 @@
   <p>The changes you push are propagated to <b>every user viewing this page</b>.</p>
   <br/>
   <p>Edit the file to see more examples of what you can do.</p>
-  <i>(The commands above will only work in linux/mac systems, and required ruby and rubygems to be installed)
+  <i>(The commands above will only work in linux/mac systems, and required ruby and rubygems to be installed)</i>
+  <div id="footer"><a href="../">&lt;&lt; Back to more examples</a></div>
 </body>
 </html>
