--- a/examples/test/index.html
+++ b/examples/test/index.html
@@ -34,5 +34,6 @@
     </div>
   </div>
   <p>For proper testing: We're using callbacks that use console.log, which only works with Webkit or Firebug. You need to open firebug to make it work on Firefox.</p>
+  <div id="footer"><a href="../">&lt;&lt; Back to more examples</a></div>
 </body>
 </html>
