--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     HTML elements with remote data in real-time.
   </p>
   <p>
-    Take a look at the <a href="examples">examples</a>!
+    Take a look at the <a href="examples/index.html">examples</a>!
   </p>
   <p><a href="http://github.com/micho/syncable">View on Github</a></p>
 </body>
