Minor styling changes

--- a/examples/hello/index.html
+++ b/examples/hello/index.html
@@ -25,7 +25,7 @@
     <code>
       tweets = new Collection('tweets')</code>
   </pre>
-  <p>Awesome. We will feed that collection with JSON items, and they will be rendered using a Mustache template.</p>
+  <p>Awesome. We will feed that collection with JSON items. They will be rendered using a Mustache template.</p>
   <pre>
     <code>
       tweets.template = "{{user}}: {{body}}"</code>
