--- a/examples/chat/index.html
+++ b/examples/chat/index.html
@@ -22,6 +22,6 @@
   </div>
   <div id="messages"></div>
   <div id="footer"><a href="../">&lt;&lt; Back to more examples</a></div>
-  <script src="http://json-pusher.heroku.com/asd/last_messages.js"></script>
+  <script src="http://json-pusher.heroku.com/chat_example/last_messages.js"></script>
 </body>
 </html>
