Correcting some noob errors

--- a/examples/test/index.html
+++ b/examples/test/index.html
@@ -16,6 +16,9 @@
   </div>
   <div class="pane">
     <div id="static_tweets">
+      <div class="tweets_item" id="static_tweets_13">
+        <span class="user">bond</span><span class="body">my name is... B</span>
+      </div>
       <div class="tweets_item" id="static_tweets_12">
         <span class="user">doce:</span><span class="body">12</span>
       </div>
